[package]
name = "bt_math"
version = "0.2.0"
edition = "2021"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Basic math expression evaluator library. Support basic math operators (+,-,*,/,^), parenthesis, and functions such as log10, ln, log2, exp, sin, cos, tan, asin, acos, atan, abs, sqrt. Support PI and E (Euler's number) as constants. Support negative numbers/expressions"
keywords = ["math"]
categories = ["science", "mathematics"]
repository = "https://github.com/bachuetech/bt_math.git"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_math"
license = "GPL-3.0-only"

[dependencies]
regex = "1.11.1"
